Main Form has been designed with menu items added{Student,Course,Teacher,Program,Exit}. This is still from an administrator view.{Add, Update,Delete} to follow.

--- a/LMSDB/LMSDB/LMSDB.vbproj
+++ b/LMSDB/LMSDB/LMSDB.vbproj
@@ -99,6 +99,21 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddstudentForm.Designer.vb">
+      <DependentUpon>AddstudentForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AddstudentForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="MainForm.Designer.vb">
+      <DependentUpon>MainForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MYSQL_DB_.vb" />
+    <Compile Include="Student.vb" />
     <Compile Include="StudentForm.Designer.vb">
       <DependentUpon>StudentForm.vb</DependentUpon>
     </Compile>
@@ -128,8 +143,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddstudentForm.resx">
+      <DependentUpon>AddstudentForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -164,6 +185,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="My Project\Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
