ADMIN FUNCTIONS COMPLETE. REMAINING PART: ENROL STUDENTS. VIEW REPORTS

--- a/LMSDB/LMSDB/App.config
+++ b/LMSDB/LMSDB/App.config
@@ -7,6 +7,8 @@
             providerName="MySql.Data.MySqlClient" />
         <add name="LMSDB.My.MySettings.ldbmsrevConnectionString1" connectionString="server=localhost;user id=root;persistsecurityinfo=True;database=ldbmsrev;password=QzmP28chap73"
             providerName="MySql.Data.MySqlClient" />
+        <add name="LMSDB.My.MySettings.ldbmsrevConnectionString2" connectionString="server=localhost;user id=root;password=QzmP28chap73;persistsecurityinfo=True;database=ldbmsrev"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
