--- a/LMSDB/LMSDB/LMSDB.vbproj
+++ b/LMSDB/LMSDB/LMSDB.vbproj
@@ -99,6 +99,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCourseForm.Designer.vb">
+      <DependentUpon>AddCourseForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AddCourseForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddstudentForm.Designer.vb">
       <DependentUpon>AddstudentForm.vb</DependentUpon>
     </Compile>
@@ -106,14 +112,53 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="COURSE.vb" />
+    <Compile Include="CourseDNU.vb" />
+    <Compile Include="EditCourseForm.Designer.vb">
+      <DependentUpon>EditCourseForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EditCourseForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ldbmsrevDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ldbmsrevDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ldbmsrevDataSet.vb">
+      <DependentUpon>ldbmsrevDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ldbmsrevDataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ldbmsrevDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ManageStudentForm.Designer.vb">
+      <DependentUpon>ManageStudentForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ManageStudentForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MYSQL_DB_.vb" />
-    <Compile Include="Student.vb" />
+    <Compile Include="DeleteCourseForm.Designer.vb">
+      <DependentUpon>DeleteCourseForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DeleteCourseForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StaticsForm.Designer.vb">
+      <DependentUpon>StaticsForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StaticsForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="STUDENT.vb" />
     <Compile Include="StudentForm.Designer.vb">
       <DependentUpon>StudentForm.vb</DependentUpon>
     </Compile>
@@ -141,10 +186,31 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="StudentListForm.Designer.vb">
+      <DependentUpon>StudentListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StudentListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateDeleteStudentForm.Designer.vb">
+      <DependentUpon>UpdateDeleteStudentForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="UpdateDeleteStudentForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddCourseForm.resx">
+      <DependentUpon>AddCourseForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddstudentForm.resx">
       <DependentUpon>AddstudentForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleteCourseForm.resx">
+      <DependentUpon>DeleteCourseForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditCourseForm.resx">
+      <DependentUpon>EditCourseForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
@@ -152,17 +218,51 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ManageStudentForm.resx">
+      <DependentUpon>ManageStudentForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="StaticsForm.resx">
+      <DependentUpon>StaticsForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StudentForm.resx">
       <DependentUpon>StudentForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="StudentListForm.resx">
+      <DependentUpon>StudentListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateDeleteStudentForm.resx">
+      <DependentUpon>UpdateDeleteStudentForm.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ldbmsrevDataSet.xsc">
+      <DependentUpon>ldbmsrevDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ldbmsrevDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ldbmsrevDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ldbmsrevDataSet.xss">
+      <DependentUpon>ldbmsrevDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ldbmsrevDataSet1.xsc">
+      <DependentUpon>ldbmsrevDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="ldbmsrevDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ldbmsrevDataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ldbmsrevDataSet1.xss">
+      <DependentUpon>ldbmsrevDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -187,6 +287,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\Addison image.jpg" />
+    <Content Include="Images\colorful-340.png" />
     <Content Include="My Project\Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
