--- a/LMSDB/LMSDB/LMSDB.vbproj
+++ b/LMSDB/LMSDB/LMSDB.vbproj
@@ -120,6 +120,7 @@
     <Compile Include="EditCourseForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GRADES.vb" />
     <Compile Include="ldbmsrevDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -139,6 +140,12 @@
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ManagecourseForm.Designer.vb">
+      <DependentUpon>ManagecourseForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ManagecourseForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ManageStudentForm.Designer.vb">
       <DependentUpon>ManageStudentForm.vb</DependentUpon>
     </Compile>
@@ -150,6 +157,12 @@
       <DependentUpon>DeleteCourseForm.vb</DependentUpon>
     </Compile>
     <Compile Include="DeleteCourseForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewTestForm.Designer.vb">
+      <DependentUpon>NewTestForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="NewTestForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StaticsForm.Designer.vb">
@@ -218,6 +231,9 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ManagecourseForm.resx">
+      <DependentUpon>ManagecourseForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ManageStudentForm.resx">
       <DependentUpon>ManageStudentForm.vb</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +242,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewTestForm.resx">
+      <DependentUpon>NewTestForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StaticsForm.resx">
       <DependentUpon>StaticsForm.vb</DependentUpon>
